@@ -1,11 +1,11 @@
 {
-  "timestamp" : "2022-05-10T01:06:09Z",
-  "count" : 0,
-  "count_minmax" : [ 0, 0 ],
-  "count_prev_day_inc" : 1,
+  "timestamp" : "2022-05-10T16:25:17Z",
+  "count" : 1,
+  "count_minmax" : [ 0, 1 ],
+  "count_prev_day_inc" : 2,
   "count_prev_day_dec" : 0,
-  "uniques" : 0,
-  "uniques_minmax" : [ 0, 0 ],
-  "uniques_prev_day_inc" : 0,
+  "uniques" : 1,
+  "uniques_minmax" : [ 0, 1 ],
+  "uniques_prev_day_inc" : 1,
   "uniques_prev_day_dec" : 0
 }
