@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-10T01:06:09Z",
+  "timestamp" : "2022-05-10T16:25:17Z",
   "count_outdated" : 261,
   "uniques_outdated" : 139,
-  "count" : 288,
-  "uniques" : 158,
+  "count" : 289,
+  "uniques" : 159,
   "clones" : [
     {
       "timestamp": "2022-04-28T00:00:00Z",
@@ -58,6 +58,13 @@
       "timestamp": "2022-05-09T00:00:00Z",
       "count": 2,
       "count_minmax": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2022-05-10T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
     }
