@@ -1,5 +1,5 @@
 {
-  "count": 27,
+  "count": 28,
   "uniques": 13,
   "clones": [
     {
@@ -40,6 +40,11 @@
     {
       "timestamp": "2022-05-09T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-05-10T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
